Fix transitions on mobile

--- a/assets/styles/util.scss
+++ b/assets/styles/util.scss
@@ -39,3 +39,7 @@
 .u-height-100 {
   height: 100%;
 }
+
+.u-overflowHidden {
+  overflow: hidden;
+}
